<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    android:background="@color/grey"
    tools:context=".ResultActivity"
    tools:deviceIds="wear">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/box_inset_layout_padding">

            <TextView
                android:id="@+id/goToWorldSkills"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/go_to_nworldskills_2019"
                android:textAlignment="center"
                android:textColor="@color/aquamarine"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/stepsTextView"
                android:layout_width="85dp"
                android:layout_height="16dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="20dp"
                android:text="@string/_10_000_steps"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.694"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/goToWorldSkills"
                tools:ignore="SmallSp" />

            <ImageView
                android:id="@+id/shoesImageView"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="7dp"
                android:src="@drawable/shoes"
                app:layout_constraintEnd_toStartOf="@+id/stepsTextView"
                app:layout_constraintTop_toBottomOf="@+id/goToWorldSkills"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="17dp"
                android:text="@string/description"
                android:textColor="@color/aquamarine"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stepsTextView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="148dp"
                android:layout_height="match_parent"
                android:layout_marginTop="7dp"
                android:text="@string/desc_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/button"
                android:layout_width="105dp"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bt_shape"
                android:gravity="center"
                android:onClick="show_toast"
                android:text="@string/send_result"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:id="@+id/bottomSpace"
                app:layout_constraintTop_toBottomOf="@+id/button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.wear.widget.BoxInsetLayout>
