<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    android:background="@color/grey"
    tools:context=".SignInActivity"
    tools:deviceIds="wear">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_marginTop="1dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="145dp"
            android:layout_height="37dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/aquamarine"
            android:textColorHint="@color/aquamarine"
            android:textSize="15sp"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoImageView"
            android:imeOptions="actionNext"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="145dp"
            android:layout_height="37dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/aquamarine"
            android:textColorHint="@color/aquamarine"
            android:textSize="15sp"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

        <Button
            android:id="@+id/button"
            android:layout_width="145dp"
            android:layout_height="37dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bt_shape"
            android:gravity="center"
            android:onClick="next_activity"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.wear.widget.BoxInsetLayout>